# GNN_cardiac_ageing

./: README.md
cage_repo/: .gitignore  README.md
cage_repo/code/hairy_heart/: .gitignore  generate_files_average.py  script_to_run_in_paraview_shell.py
cage_repo/code/models/: .gitignore  colnames.py  compare_estimators.py  generate_meshes_for_diagram.py  gnn_interpretation_explainer.py  gnn_interpretation_saliency.py  joyplot.py  notes  predict_age_delta.py  run.py  run_all.py
cage_repo/code/models/old/: analysis_cardiac_ageing_paper.py  circus_and_heatmap_plots.R  emm_example.R  feature_permutation_test.py  joyplot.py  predict.R  survival_regression.py  synthetic_data.py
cage_repo/code/preprocessing/: README.md  data_preprocessing_1.py  data_preprocessing_2.py
meshtools_repo/: Dockerfile  pyproject.toml
meshtools_repo/example/: .gitignore  generate_anonymized_data.py  generate_synthetic_data.py  run_example.py
meshtools_repo/meshtools/: __init__.py  gnn.py  gnn_transformers.py  miscellaneous.py  nn.py
